[workspace]
resolver = "2"
members = ["crates/*"]

[profile.release-lto]
inherits = "release"
lto = "thin"

[patch."https://github.com/paritytech/substrate"]
frame-benchmarking = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
frame-support = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
frame-system = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
pallet-balances = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
pallet-timestamp = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-block-builder = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-client-api = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-client-db = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-consensus = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-network = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-rpc = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-service = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-transaction-pool = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-transaction-pool-api = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-api = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-block-builder = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-blockchain = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-consensus = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-core = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-database = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-debug-derive = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-externalities = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-inherents = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-io = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-runtime = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-std = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-storage = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-timestamp = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-transaction-pool = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
substrate-prometheus-endpoint = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
