[package]
name = "bioauth-keys"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sp-application-crypto = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-keystore = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
thiserror = "1"

[features]
default = []
