[package]
name = "humanode-rpc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
author-ext-api = { version = "0.1", path = "../author-ext-api" }
author-ext-rpc = { version = "0.1", path = "../author-ext-rpc" }
bioauth-flow-api = { version = "0.1", path = "../bioauth-flow-api" }
bioauth-flow-rpc = { version = "0.1", path = "../bioauth-flow-rpc" }
bioauth-keys = { version = "0.1", path = "../bioauth-keys" }
frontier-api = { version = "0.1", path = "../frontier-api" }
humanode-runtime = { version = "0.1", path = "../humanode-runtime" }
primitives-frontier = { version = "0.1", path = "../primitives-frontier" }
robonode-client = { version = "0.1", path = "../robonode-client" }

fc-db = { default-features = false, git = "https://github.com/humanode-network/frontier", branch = "time-warp" }
fc-rpc = { default-features = false, git = "https://github.com/humanode-network/frontier", branch = "time-warp" }
fc-rpc-core = { default-features = false, git = "https://github.com/humanode-network/frontier", branch = "time-warp" }
fp-rpc = { default-features = false, git = "https://github.com/humanode-network/frontier", branch = "time-warp" }
fp-storage = { default-features = false, git = "https://github.com/humanode-network/frontier", branch = "time-warp" }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
pallet-transaction-payment-rpc = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-client-api = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-consensus-babe = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-consensus-babe-rpc = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-consensus-epochs = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-finality-grandpa = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-finality-grandpa-rpc = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-network = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-rpc = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-rpc-api = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-transaction-pool = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-transaction-pool-api = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-api = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-block-builder = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-blockchain = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-consensus = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-consensus-babe = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-keystore = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-runtime = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
substrate-frame-rpc-system = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
