[package]
name = "precompile-evm-accounts-mapping"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pallet-evm-accounts-mapping = { version = "0.1", path = "../pallet-evm-accounts-mapping", default-features = false }
primitives-ethereum = { version = "0.1", path = "../primitives-ethereum", default-features = false }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
fp-evm = { git = "https://github.com/humanode-network/frontier", branch = "time-warp", default-features = false }
sp-std = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "time-warp" }

[dev-dependencies]
frame-support = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
frame-system = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
hex-literal = "0.3"
mockall = "0.10"
primitive-types = "0.11"
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-core = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-io = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-runtime = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "time-warp" }

[features]
default = ["std"]
std = ["codec/std", "fp-evm/std", "sp-std/std", "pallet-evm-accounts-mapping/std", "primitives-ethereum/std"]
