[package]
name = "primitives-frontier"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
frontier-api = { version = "0.1", path = "../frontier-api", default-features = false }

fp-rpc = { default-features = false, git = "https://github.com/humanode-network/frontier", branch = "time-warp" }
pallet-ethereum = { default-features = false, git = "https://github.com/humanode-network/frontier", branch = "time-warp" }
sp-api = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-blockchain = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-runtime = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
